--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -3,7 +3,7 @@ title: "Home"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
-    toc: false
+    toc: TRUE
 editor_options:
   chunk_output_type: console
 ---
@@ -77,5 +77,17 @@ kable(result, "html") %>%
 ```
 
 
+<h1>Plotting a gradient</h1>
 
 
+## A plot
+
+```{r, include=FALSE}
+data_5130 <- read.csv("data/data_5130.csv")
+```
+
+```{r}
+gradient_plot(data_5130$shanon_index_v2, data_5130$pHjord)
+```
+
+documentation for the function [link](plot.html)
