wflow_publish(all = TRUE)

--- a/analysis/plot.Rmd
+++ b/analysis/plot.Rmd
@@ -29,7 +29,7 @@ index <- index[missing]
 variable <- variable[missing]
 
 variable <-  as.numeric(variable)
-ggplot(mapping = aes(x = index, y = variable)) +
+ggplot(mapping = aes(x = variable, y = index)) +
   geom_point() +
   geom_smooth(method = "lm", se = FALSE)
 }
